--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 HELP.md
 .gradle
 build/
-!gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
 
@@ -32,7 +31,7 @@ out/
 .vscode/
 
 ### Package Files ###
-*.jar
+*jar
 *.war
 *.nar
 *.ear
